A static html version of the initial gameboard

--- a/client/app/views/sections/board.ejs
+++ b/client/app/views/sections/board.ejs
@@ -1,1 +1,83 @@
-<p>Hello, World!</p>
+<h1>Reversi</h1>
+<table border="1">
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/white.png"/></td>
+	    <td><img src="img/black.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/black.png"/></td>
+	    <td><img src="img/white.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+	<tr>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	    <td><img src="img/empty.png"/></td>
+	</tr>
+</table>
